--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-APScheduler==3.10.1
+APScheduler==3.9.1
 boto3==1.26.107
-fastapi==0.95.0
-jose==1.0.0
-pydantic==1.10.7
-PyMySQL==1.0.3
-python-dotenv==0.21.1
+fastapi==0.100.0
+phpserialize==1.3
+pydantic==1.10.2
+PyMySQL==1.0.2
+python-dotenv==1.0.0
 python_dateutil==2.8.2
-pytz==2023.3
-requests==2.28.2
-sentry_sdk==1.19.1
-SQLAlchemy==2.0.9
-uvicorn==0.21.1
+pytz==2022.2.1
+requests==2.28.1
+SQLAlchemy==1.4.41
+uvicorn==0.23.1
